@@ -31,9 +31,7 @@ export enum AvailablePlants {
 export type Seasons = 'summer' | 'winter' | 'autumn' | 'spring';
 
 export interface PlantedField {
-  // FIXME(ySnoopyDogy): Remove plantedAt field in next version
-  plantedAt: number;
-  harvestAt?: number;
+  harvestAt: number;
   plantedSeason: Seasons;
   isPlanted: true;
   plantType: AvailablePlants;
