@@ -1,5 +1,5 @@
 import ChatInputInteractionContext from '../../structures/command/ChatInputInteractionContext';
-import { Plants } from '../fazendinha/constainst';
+import { Plants } from '../fazendinha/constants';
 import { huntValues } from './constants';
 
 const sellInfo = async (
